# meshy

./: .gitignore  CMakeLists.txt  README.md  mystl.cpp  python_extension.cpp  rotate.cpp  run_cmake_mac.sh  scaler.cpp  spike.cpp  spikemg.cpp  spikemg2.cpp  spikemg3.cpp  spikernd.cpp
apps/: stats.cpp
scripts/: verify_cube_trimesh.py
spikes/: spike.cpp  spikemg.cpp  spikemg2.cpp  spikernd.cpp
src/: BreadthFirstSearch.cpp  BreadthFirstSearch.h  MeshGraph.cpp  MeshGraph.h  geometry.cpp  geometry.h  shapedist.cpp  shapedist.h  stl.cpp  stl.h
